syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/Mersock/golang-sample-bank/pb";

message CreateUserReq {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
}

message CreateuserRes {
    User user = 1;
}