syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Mersock/golang-sample-bank/pb";

service SimpleBank {
    rpc CreateUser (CreateUserReq) returns (CreateuserRes){
            option (google.api.http) = {
                 post: "/v1/create_user"
                 body: "*"
            };
    }
    rpc LoginUser (LoginReq) returns (LoginRes){
        option (google.api.http) = {
            post: "/v1/login_user"
            body: "*"
       };
    }
}